welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:21: error: ':' expected but ',' found.
def compteur(nombre, tableau) {
                   ^golomb:29: error: identifier expected but '}' found.
 }
 ^